--- a/index.html
+++ b/index.html
@@ -35,6 +35,18 @@
             <img src="payel picture.png" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="eching.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>My journey with Programming Hero</h1>
+            <h2>Become a Web Developer</h2>
+            <p>I will become a web developer..This couse helps us very much. I heard about this course at first my
+                friends anik and sumon..They are very helpful. Now I am very Excited & Anxious about this course.</p>
+            <a class="link-button" target=_blank href="">DOWNLOAD RESUME</a>
+        </div>
+    </section>
 </body>
 
 
